--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@ body {
 
 main {
     background-color: #ffffff;
-    margin: 1rem;
+    margin: 3rem;
     padding: 1rem;
     border-radius: 5px;
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
 }
 
 li {
@@ -25,6 +30,7 @@ li {
     line-height: 20px;
     text-align: center;
     color: #3F3F3F;
+    box-shadow: 0px 2px 3px rgba(51, 51, 51, 0.2);
     border: none
 }
 
@@ -33,8 +39,8 @@ li {
 }
 
 .p {
-    font-size: 12px;
-    line-height: 12px;
+    font-size: 16px;
+    line-height: 1.7;
     color: #333333;
 }
 
@@ -53,7 +59,7 @@ li {
 }
 
 .buttonVariantOuline:hover {
-    background: rgba(41, 98, 255, 0.1);
+    background-color: rgba(41, 98, 255, 0.1);
 }
 
 .buttonVariantText {
@@ -71,7 +77,7 @@ li {
 }
 
 .buttonVariantText:hover {
-    background: rgba(41, 98, 255, 0.1);
+    background-color: rgba(41, 98, 255, 0.1);
 }
 
 .buttonDesableShadow {
@@ -84,7 +90,7 @@ li {
     padding-block-start: 8px;
     border-radius: 6px;
     color: #FFFFFF;
-    background: #3D5AFE;
+    background-color: #3D5AFE;
     border: none;
 }
 
@@ -268,4 +274,18 @@ li {
 
 .colorDanger:hover {
     background-color: #9A0007;
+}
+
+@media (min-width: 500px) {
+    .media {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 50px;
+    }
+}
+
+@media (min-width: 500px) {
+    .lastBtn {
+        grid-column: 1 /3;
+    }
 }
